doc: reviewed 2.5 Memory model